<resources>
    <string name="app_name">Twinner</string>
    <string name="warn_internet_connection">Please check your internet connection and try again</string>
    <string name="title_home">What Do You Want?</string>
    <string name="title_dialog_remove">Project will be deleted forever, confirm?</string>
    <string name="lbl_no">No</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_back">Back</string>
    <string name="title_my_projects">My Projects</string>
    <string name="title_twin_projects">Examples</string>
    <string name="lbl_new_project">NEW PROJECT</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_save">Save</string>
    <string name="warn_name_project">You must enter a name</string>
    <string name="title_name_dialog">Give your project a name</string>
    <string name="warn_not_implemented">Not implemented yet</string>
    <string name="lbl_forward">Next</string>
    <string name="title_kits">Kits</string>
    <string name="title_modules">Modules</string>
    <string name="lbl_experiments">Experiments</string>
    <string name="lbl_minutes">~%s</string>
    <string name="slash"> / </string>
    <string name="lbl_finish">Finish</string>
    <string name="lbl_entrance">Start</string>
    <string name="lbl_how_it_works">How It Works</string>
    <string name="title_auth">Twinner</string>
    <string name="content_auth">Free Minds, Unique Experiments, Confident Individuals</string>
    <string name="lbl_login">LOGIN</string>
    <string name="lbl_sign_up">SIGN UP</string>
    <string name="lbl_skip">Skip</string>
    <string name="lbl_mail">E-Mail</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_forgot_password">Forgot My Password</string>
    <string name="lbl_name">Name Surname</string>
    <string name="lbl_phone">Phone Number</string>
    <string name="lbl_accept_agreement">I agree to the terms of service.</string>
    <string name="content_forgot_password">Please enter your email address</string>
    <string name="lbl_reset_password">RESET MY PASSWORD</string>
    <string name="lbl_city">City</string>
    <string name="lbl_age">Age</string>
    <string name="warn_full_name_field">Please fill your name and surname</string>
    <string name="warn_email_field">Please enter a valid email address</string>
    <string name="warn_fill_password_input">Password must be at least 6 characters</string>
    <string name="warn_fill_phone_input">Please enter a valid phone number</string>
    <string name="warn_user_agreement">You must agree to the terms and conditions</string>
    <string name="warn_reset_password">Please check your email,follow the link and change your password.</string>
    <string name="lbl_success_sign_up">Your account has been created</string>
    <string name="warn_unknown_error">Something went wrong. Please try again later</string>
    <string name="lbl_success_login">Login successful</string>
    <string name="lbl_scanning_twin">Searching nearby twins…</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_success_connection">Successfully connected</string>
    <string name="warn_no_blocks">You need to add some blocks</string>
    <string name="lbl_show_settings">Settings</string>
    <string name="title_location_settings">Location needs to be enabled for Bluetooth Scanning</string>
    <string name="title_bluetooth_settings">Bluetooth is not turned on</string>
    <string name="lbl_saved_success">Project saved successfully</string>
    <string name="title_dialog_back_blockly">The current project is not saved, \n whether to continue to exit ?</string>
    <string name="lbl_coding">Coding</string>
    <string name="lbl_control">Control</string>
    <string name="lbl_cs">Coming Soon</string>
    <string name="lbl_title">Title:</string>
    <string name="lbl_difficulty_hard">Hard</string>
    <string name="lbl_difficulty_easy">Easy</string>
    <string name="lbl_difficulty_medium">Medium</string>
    <string name="warn_not_supported">The device does not support this feature</string>
    <string name="lbl_dont_save">Don\'t Save</string>
    <string name="lbl_email_permission">I agree to receive e-mails</string>
    <string name="website_twin_agreement">http://www.yga.org.tr/medias/upload/twin_user.pdf</string>
    <string name="warn_no_kit">You do not have the necessary kit or the modules to complete this experiment.</string>
    <string name="lbl_twin_disconnected">Connection lost</string>
    <string name="lbl_js_infinite_loop">Code evaluation stopped due to reach loop limit</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_previous">Previous</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_timeout">Connection timed out. Please try again later.</string>
    <string name="warn_scan_registration_fail">An error has occurred! Can you turn the Bluetooth of your device off and on again?</string>
    <string name="warn_storage_permission">You need to grant writing permissions on files to see the experiments. Would you like to go to the settings to do so?</string>
    <string name="warn_no_internet">You need a working internet connection to display this page for the first time</string>
    <string name="lbl_downloading_items">Files are being downloaded.</string>
    <string name="value_download_default">%0</string>
    <string name="lbl_turkish">Turkish</string>
    <string name="lbl_english">English</string>g>
    <string name="title_language_selection">CHOOSE LANGUAGE</string>
    <string name="title_experiments">EXPERIMENTS</string>
    <string name="warn_orientation_not_supported">Cihazın döndürülme hareketlerini desteklemiyor.</string>
</resources>