<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="12dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingTop="25dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/dialog_with_two_button_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/msr_900"
            android:gravity="center"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:text="@string/title_dialog_back_blockly"
            android:textColor="@color/greyish_brown"
            android:textSize="@dimen/dialog_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/dialog_with_two_buttons_root_left"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="18dp"
            app:cardBackgroundColor="@color/greyish_brown"
            app:cardCornerRadius="18dp"
            app:cardElevation="9dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_with_two_button_tv_title"
            app:layout_constraintVertical_bias="0.6">

            <TextView
                android:id="@+id/dialog_with_two_buttons_tv_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/msr_700"
                android:maxLines="1"
                android:gravity="center"
                android:paddingStart="12dp"
                android:paddingTop="10dp"
                android:paddingEnd="12dp"
                android:paddingBottom="10dp"
                android:text="@string/lbl_no"
                android:textColor="@color/white"
                android:textSize="@dimen/dialog_button" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/dialog_with_two_buttons_root_right"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="18dp"
            app:cardBackgroundColor="@color/aquamarine"
            app:cardCornerRadius="18dp"
            app:cardElevation="9dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/dialog_with_two_button_tv_title">

            <TextView
                android:id="@+id/dialog_with_two_buttons_tv_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/msr_700"
                android:maxLines="1"
                android:gravity="center"
                android:paddingStart="12dp"
                android:paddingTop="10dp"
                android:paddingEnd="12dp"
                android:paddingBottom="10dp"
                android:text="@string/lbl_yes"
                android:textColor="@color/white"
                android:textSize="@dimen/dialog_button" />


        </androidx.cardview.widget.CardView>




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>